--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.9"
-  }
+  },
+  "browserslist": [
+    "last 3 and_chr versions",
+    "last 3 chrome versions",
+    "last 3 opera versions",
+    "last 3 ios_saf versions",
+    "last 3 safari versions"
+  ]
 }
