--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "last 3 opera versions",
     "last 3 ios_saf versions",
     "last 3 safari versions"
-  ]
+  ],
+  "dependencies": {
+    "genre": "^2.0.0"
+  }
 }
